fail_crate/tests/no_prefix_on_struct.rs
use inew::New;

#[derive(New)]
#[new(no_prefix)]
struct A;

fn main() {}
